--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
   <header class="header">
       <div class="header__title">
-        <%= link_to "試算アプリ", root_path, class: "header__title--text" %>
+        <%= link_to "ちょこっと見積もり", root_path, class: "header__title--text" %>
       </div>
       <div class="header__right">
         <%= link_to "新規見積", new_calculation_path, class: "header__right--btn" %>
